# JetsonIntentRouter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tag.yml
agents/: base.py  local_command.py  openai_chat.py
config/: agents.yaml  intents.yaml  splitter.yaml  train.yaml
data/: generate_synth.py  load_templates.py  train.jsonl  val.jsonl
data/templates/: skip_words.yaml
data/templates/expansion_rules/: common.yaml  home-assistant.yaml  media.yaml
data/templates/intents/CommandControl/: climate_HassClimateGetTemperature.yaml
data/templates/intents/MediaLibrary/: overseer_RequestMovie.yaml  overseer_RequestTVShow.yaml  overseer_SearchMedia.yaml  (+3 more)
data/templates/lists/: common.yaml  home-assistant.yaml  media.yaml
docs/: TODO.md
intent_router/router/: logging.py  router.py  types.py
intent_router/runtime/: trt_classifier.py
intent_router/service/: app.py  openai_compat.py
router/: logging.py  router.py  splitter.py  streaming.py  types.py
runtime/: ort_classifier.py  trt_classifier.py
scripts/: build_trt.sh
service/: app.py  config.py  labeling.py  openai_compat.py
service/templates/: label.html
src/intent_router/agents/: base.py  local_command.py  openai_chat.py  types.py
src/intent_router/router/: splitter.py  streaming.py
src/intent_router/service/: config.py  labeling.py
tests/: test_agents.py  test_chat_endpoint.py  test_logging.py  test_router.py  test_router_components.py  test_runtime.py  test_service.py  test_splitter.py
training/: export_onnx.py  io.py  simplify_onnx.py  train.py
