[project]
name = "jetson-intent-router"
version = "0.1.0"
description = "Jetson-friendly intent router with ONNX/TensorRT and OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "flask>=3.0.0",
  "pyyaml>=6.0.1",
  "numpy>=1.24",
  "transformers>=4.41.0",
  "datasets>=2.19.0",
  "torch>=2.1.0",
  "accelerate>=0.31.0",
  "onnx>=1.16.0",
  "onnxruntime>=1.18.0",
  "onnxsim>=0.4.36",
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
jetson = [
  "tensorrt",
  "pycuda",
]

dev = [
  "black",
  "ruff",
  "pytest",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
